--- a/ConstructorGenerator/ConstructorGenerator.csproj
+++ b/ConstructorGenerator/ConstructorGenerator.csproj
@@ -17,17 +17,32 @@
 
     <ItemGroup>
         <None Include="$(OutputPath)$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-		<None Include="$(SolutionDir)README.md" Pack="true" PackagePath="" />
+        <None Include="$(OutputPath)ConstructorGenerator.Attributes.dll" Pack="true" Visible="false"/>
+		<None Include="$(SolutionDir)README.md" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
+        <PackageReference GeneratePathProperty="true"  Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
         <None Remove="Attributes.txt" />
         <EmbeddedResource Include="Generation\GenerateConstructorTemplate.txt" />
-        <EmbeddedResource Include="Attributes.txt" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ConstructorGenerator.Attributes\ConstructorGenerator.Attributes.csproj" />
+    </ItemGroup>
+    
+    <PropertyGroup>
+        <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
+    </PropertyGroup>    
+
+    <Target Name="GetDependencyTargetPaths">
+        <ItemGroup>
+            <TargetPathWithTargetPlatformMoniker Include="$(TargetDir)ConstructorGenerator.Attributes.dll" 
+                                                 IncludeRuntimeDependency="false" />
+        </ItemGroup>
+    </Target>
 </Project>
