--- a/ConstructorGenerator/ConstructorGenerator.csproj
+++ b/ConstructorGenerator/ConstructorGenerator.csproj
@@ -9,20 +9,19 @@
         <RepositoryUrl>https://github.com/Swarley97/ConstructorGenerator</RepositoryUrl>
         <PackageTags>generator; c#; constructor</PackageTags>
         <PackageProjectUrl>https://github.com/Swarley97/ConstructorGenerator</PackageProjectUrl>
-        <Version>$(VersionPrefix)0.2.3</Version>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <Version>$(VersionPrefix)0.3.2</Version>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 	</PropertyGroup>
 
     <ItemGroup>
         <None Include="$(OutputPath)$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-        <None Include="$(OutputPath)ConstructorGenerator.Attributes.dll" Pack="true" Visible="false"/>
+        <None Include="$(OutputPath)ConstructorGenerator.Attributes.dll" PackagePath="analyzers/dotnet/cs" Pack="true" Visible="false" />
 		<None Include="$(SolutionDir)README.md" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference GeneratePathProperty="true"  Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
+        <PackageReference GeneratePathProperty="true" Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
     </ItemGroup>
 
@@ -41,8 +40,7 @@
 
     <Target Name="GetDependencyTargetPaths">
         <ItemGroup>
-            <TargetPathWithTargetPlatformMoniker Include="$(TargetDir)ConstructorGenerator.Attributes.dll" 
-                                                 IncludeRuntimeDependency="false" />
+            <TargetPathWithTargetPlatformMoniker Include="$(TargetDir)ConstructorGenerator.Attributes.dll" IncludeRuntimeDependency="false" />
         </ItemGroup>
     </Target>
 </Project>
