--- a/ConstructorGenerator/ConstructorGenerator.csproj
+++ b/ConstructorGenerator/ConstructorGenerator.csproj
@@ -9,24 +9,28 @@
     <RepositoryUrl>https://github.com/Swarley97/ConstructorGenerator</RepositoryUrl>
     <PackageTags>generator; c#; constructor</PackageTags>
     <PackageProjectUrl>https://github.com/Swarley97/ConstructorGenerator</PackageProjectUrl>
-    <Version>$(VersionPrefix)0.3.3</Version>
+    <Version>0.5.0</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <IncludeBuildOutput>false</IncludeBuildOutput>
-    <developmentDependency>true</developmentDependency>
+    <DevelopmentDependency>true</DevelopmentDependency>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <IsRoslynComponent>true</IsRoslynComponent>
+    <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'" >true</GeneratePackageOnBuild>
+    <AutoIncrementPackageRevision>true</AutoIncrementPackageRevision>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="$(OutputPath)$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     <None Include="$(OutputPath)ConstructorGenerator.Attributes.dll" PackagePath="analyzers/dotnet/cs" Pack="true" Visible="false" />
+    <None Include="$(OutputPath)ConstructorGenerator.Attributes.dll" PackagePath="lib/netstandard2.0" Pack="true" Visible="false" />
+    <None Include="$(PkgScriban)\lib\netstandard2.0\Scriban.dll" PackagePath="analyzers/dotnet/cs" Pack="true" Visible="false" />
     <None Include="$(SolutionDir)README.md" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
-    <PackageReference Include="Scriban" Version="5.7.0" />
+    <PackageReference Include="Scriban" Version="5.7.0" GeneratePathProperty="true" PrivateAssets="all"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +48,7 @@
 
   <Target Name="GetDependencyTargetPaths">
     <ItemGroup>
+      <TargetPathWithTargetPlatformMoniker Include="$(PkgScriban)\lib\netstandard2.0\Scriban.dll" IncludeRuntimeDependency="false" />
       <TargetPathWithTargetPlatformMoniker Include="$(TargetDir)ConstructorGenerator.Attributes.dll" IncludeRuntimeDependency="false" />
     </ItemGroup>
   </Target>
