--- a/ConstructorGenerator.Attributes/ConstructorGenerator.Attributes.csproj
+++ b/ConstructorGenerator.Attributes/ConstructorGenerator.Attributes.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>10</LangVersion>
+        <Version>0.5.2</Version>
     </PropertyGroup>
 
 </Project>
