--- a/ConstructorGenerator/ConstructorGenerator.csproj
+++ b/ConstructorGenerator/ConstructorGenerator.csproj
@@ -14,7 +14,7 @@
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <IsRoslynComponent>true</IsRoslynComponent>
-    <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'" >true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
     <AutoIncrementPackageRevision>true</AutoIncrementPackageRevision>
   </PropertyGroup>
 
@@ -27,14 +27,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConstructorGenerator.Attributes\ConstructorGenerator.Attributes.csproj"
-    PrivateAssets="all"/>
+    <ProjectReference Include="..\ConstructorGenerator.Attributes\ConstructorGenerator.Attributes.csproj" PrivateAssets="all" />
   </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
-    <PackageReference Include="Scriban" Version="5.7.0" GeneratePathProperty="true" PrivateAssets="all"/>
+    <PackageReference Include="Scriban" Version="5.7.0" GeneratePathProperty="true" PrivateAssets="all" />
 
 <!--    do not pack the project reference because otherwise it will be added as dependency to the resulting nuget-->
 <!--    since we do not create a nuget for this projekt this is required.-->
